<resources>
    <string name="app_name">MyMiniSlot</string>
    <string name="btn_reset_txt">手持ちRESET</string>
    <string name="txtv_gamename">ミニスロットゲーム</string>
    <string name="txtv1str">手持ちコイン：</string>
    <string name="coinvalue">1000</string>
    <string name="txtv2str">掛け金：</string>
    <string name="betcoinvalue">10</string>
    <string name="txt_betup">掛け金UP</string>
    <string name="txt_betdown">掛け金DOWN</string>
    <string name="txt_start">Start!!</string>
    <string name="backstr">BACK</string>
    <string name="stopstr">STOP</string>
</resources>
